# modelwise-weather

./: .gitignore  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.app.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
backend/: main.py
backend/fetchers/: gfs.py
backend/parsers/: grib.py
data/: gfs.grib2
frontend/components/: ForecastTimeline.tsx  ModelAgreement.tsx  ModelSelector.tsx  ParameterSelector.tsx
frontend/pages/: Index.tsx
src/: App.tsx  index.css
src/components/: CreditsFooter.tsx  CurrentConditions.tsx  DailyForecast.tsx  ForecastTimeline.tsx  HourlyForecast.tsx  InfoTab.tsx  LanguageToggle.tsx  LocationMap.tsx  LocationPickerScreen.tsx  LocationSearch.tsx  ModelAgreement.tsx  ModelSelector.tsx  ModelToggle.tsx  NewsFeed.tsx  NoaaOutlooks.tsx  ParameterSelector.tsx  SettingsPanel.tsx  WarningsBanner.tsx  WarningsTab.tsx  WeatherChart.tsx  WeatherMap.tsx
src/contexts/: UnitsContext.tsx
src/data/: mockWeatherData.ts  news.ts  warnings.ts  weatherApi.ts
src/i18n/: index.tsx
src/lib/: forecastSymbols.ts  time.ts  units.ts  wind.ts
src/pages/: Index.tsx
