[project]
name = "modelwise-weather"
version = "0.1.0"
description = ""
authors = [
    {name = "billythecoder"}
]
license = {text = "All Rights Reserved"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "requests (>=2.33.1,<3.0.0)",
    "xarray (>=2026.2.0,<2027.0.0)",
    "cfgrib (>=0.9.15.1,<0.10.0.0)"
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 99
lint.ignore = ["E203"]
lint.extend-select = ["E501", "I001", "W291", "W292", "W293"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
